added edit_prof_img to OpenAPI yaml
